# faber

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  biome.json  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.agents/: faber.json
.github/workflows/: ci.yml  release.yml
docs/: acp_permissions.md  chat.md  continuous_mode.md  general.md  github_workflow.md  queue_mode.md  skills_rules.md  supported_agents.md
scripts/: prepare-sidecar.mjs  release.mjs
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config_watcher.rs  continuous.rs  credentials.rs  error.rs  font_detector.rs  git.rs  github.rs  lib.rs  logging.rs  main.rs  project_config.rs  pty.rs  queue.rs  session.rs  task_logger.rs  task_watcher.rs  tasks.rs
src-tauri/src/acp/: capabilities.rs  client.rs  handler.rs  mod.rs  permissions.rs  state.rs  types.rs
src-tauri/src/agent/: claude.rs  codex.rs  copilot.rs  cursor.rs  gemini.rs  mod.rs  opencode.rs  registry.rs
src-tauri/src/commands/: acp_permissions.rs  agents.rs  continuous.rs  docs.rs  files.rs  fonts.rs  git.rs  github.rs  mcp.rs  mod.rs  plugins.rs  projects.rs  prompts.rs  pty.rs  queue.rs  sessions.rs  settings.rs  skills.rs  tasks.rs  updates.rs  usage.rs
src-tauri/src/db/: agent_configs.rs  integration_branches.rs  migrations.rs  mod.rs  models.rs  projects.rs  sessions.rs  settings.rs  task_activity.rs  tasks.rs
src-tauri/src/mcp/: mod.rs  protocol.rs  server.rs  tools.rs
src-tauri/src/usage/: claude_code.rs  mod.rs  registry.rs
src/components/: Terminal.tsx
src/components/Chat/: ActivityBar.tsx  AgentPlanView.tsx  AgentTurnBlock.tsx  ChatInput.tsx  ChatMessage.tsx  ChatPane.tsx  ChatPlanQueue.tsx  ChatView.tsx  ConfigOptionsPopover.tsx  ContextCrease.tsx  ContextUsageIndicator.tsx  CreateWorktreePopover.tsx  GitContextBar.tsx  ModeSelector.tsx  ModelSelector.tsx  PermissionDialog.tsx  SessionHistorySidebar.tsx  ThoughtLevelSelector.tsx  ThreadStatusBadge.tsx  ToolCallCard.tsx  WaitingCard.tsx  index.ts
src/components/CommandPalette/: CommandPalette.tsx  commandRegistry.ts  useCommands.ts
src/components/Dashboard/: ArchivedTaskList.tsx  DashboardView.tsx  DependencyBadge.tsx  DependencyGraph.tsx  EmptyState.tsx  FilterBar.tsx  GhostParentCard.tsx  KanbanBoard.tsx  KanbanColumn.tsx  LaunchTaskDialog.tsx  PriorityBadge.tsx  (+5 more)
src/contexts/: ThemeContext.tsx
src/hooks/: useDashboardFilters.ts  useGridNavigation.ts  usePersistedState.ts  useProjectAccentColor.ts  useProjectIcon.ts  useSessionHistory.ts
src/lib/: agentDescriptions.ts  agentIcons.tsx  errorMessages.ts  graphLayout.ts  highlightMatch.tsx  markdown.ts  notifications.ts  platform.ts  priorities.ts  ptyBuffer.ts  taskGraphLayout.ts  taskSort.ts  taskStatusColors.ts  terminalTheme.ts
src/store/: appStore.ts  updateStore.ts
src/styles/: main.css
src/utils/: pickProjectFolder.ts
(+152 files in other folders)
