[package]
name = "faber"
version = "0.6.0"
description = "Faber - The AI Architect for your codebase"
authors = ["you"]
edition = "2021"
default-run = "faber"

[lib]
name = "faber_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "faber-mcp"
path = "src/bin/faber-mcp.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
git2 = { version = "0.19", features = ["vendored-openssl"] }
portable-pty = "0.9"
axum = "0.8"
serde_yaml = "0.9"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
notify = "7"
window-vibrancy = "0.6"
tauri-plugin-updater = "2"
url = "2"
regex = "1"
font-kit = "0.14"
libc = "0.2.182"
chrono = "0.4.44"
whoami = "1"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
rand = "0.9"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
