[package]
name = "faber"
version = "0.9.0"
description = "Faber - The AI Architect for your codebase"
authors = ["you"]
edition = "2021"
default-run = "faber"

[lib]
name = "faber_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "faber-mcp"
path = "src/bin/faber-mcp.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.39", features = ["bundled"] }
git2 = { version = "0.20", features = ["vendored-openssl"] }
portable-pty = "0.9"
axum = "0.8"
serde_yaml = "0.9"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
notify = "8"
window-vibrancy = "0.7"
tauri-plugin-updater = "2"
url = "2"
regex = "1"
font-kit = "0.14"
libc = "0.2"
chrono = "0.4"
whoami = "2"
reqwest = { version = "0.13", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
rand = "0.9"
semver = "1"
hex = "0.4"
agent-client-protocol = { version = "0.10.2", features = ["unstable_session_usage"] }
tokio-util = { version = "0.7", features = ["compat"] }
async-trait = "0.1"
futures = "0.3"
base64 = "0.22"
tauri-plugin-fs = "2.4.5"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6", features = ["relax-sign-encoding"] }

[dev-dependencies]
tempfile = "3"
